
Trunk (unreleased)
==================

Changes
-------

- Improved legacy coupling-based turbomachinery option, frozen rotor
  is now also possible.

- The GUI enforces the 'runcase' name for the script. This allows more robust
  handling of the runcase/XML file link, as one of the 2 names is fixed.

- Allow time-varying rotor velocity for turbomachinery.

- Mesh-joing based turbomachinery model robustness is also improved by
  allowing multiple joining retries using a slightly perturbed position.

- Refactored extrusion handling to allow easier and finer control of extrusion
  vector generation.
  * a cs_mesh_extrude_face_info_t structure allows simple settings for each
    boundary face, including number of layers, thickness, and expansion factor,
    and optionally a start and end thickness. Utility functions allow
    "per zone" settings.
  * a cs_mesh_extrude_vectors_t structure defining local extrusion vectors,
    which is built automatically based on the face settings but can be
    modified by the user.

- Added boundary layer insertion at selected faces, using a mesh deformation
  (CDO vertex-based), followed by boundary layer extrusion.

Architectural changes
---------------------

- Complete cs_all_to_all API to handle indexed cases.

- Use matrix assembler instead of matrix extension function for
  internal coupling, to allow for a broader range of linear system
  solvers and preconditionners.

- Add "Melissa" type writers for coupling with in-situ statistics
  Melissa server.

Release 5.1.0 (October 10 2017)
===============================

Physical modelling
------------------

- Turbulence: add DDES tubulence model
  * Activated using k-w SST model (iturb = 60) with keyword IDDES = 1
  * Hybrid Numerical scheme CD/SOLU can be activated with ISCHCV = 3

- Atmospheric model: add an atmostpheric infra-red absorption feature.
  Based on L. Makke PhD work.

Numerics
--------

- Atmospheric model: added partial radiative transfer properties model.
