@@ -805,6 +805,7 @@ indicate a required argument, $[ ]$ to indicate an optional argument).
 \hline
 \texttt{max\_time\_step}                   & $<$time\_step\_number$>$ \\
 \texttt{max\_time\_value}                  & $<$time\_value$>$ \\
+\texttt{max\_wall\_time}                   & $<$wall\_time$>$ \\
 \hline
 \texttt{checkpoint\_time\_step}            & $<$time\_step\_number$>$ \\
 \texttt{checkpoint\_time\_value}           & $<$time\_value$>$ \\
